--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.4.1",
+    "react-responsive-carousel": "^3.2.5",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0"
   },
