--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,31 @@ yarn-debug.log*
 yarn-error.log*
 /backend/newsApi/newsApi/bin/Debug/netcoreapp3.1
 *.cache
+
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/azds.yaml
+**/bin
+**/charts
+**/docker-compose*
+**/Dockerfile*
+**/node_modules
+**/npm-debug.log
+**/obj
+**/secrets.dev.yaml
+**/values.dev.yaml
+LICENSE
+README.md
+bin\
+obj\
