feat: Connect with mongo db on cloud

--- a/backend/newsApi/newsApi/appsettings.json
+++ b/backend/newsApi/newsApi/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NewsDatabaseSettings": {
+    "NewsCollectionName": "News",
+    "ConnectionString": "mongodb+srv://dba:Dxbhzp43@cluster0-yaruk.mongodb.net/test?retryWrites=true&w=majority",
+    "DatabaseName": "NewsDb"
+  }
+
 }
