--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-table-next": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.4.1",
+    "react-image-file-resizer": "^0.2.3",
     "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
