--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-share": "^4.1.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
