--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-share": "^4.1.0",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.0",
     "swr": "^0.2.0"
   },
