--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "3.4.1",
     "react-share": "^4.1.0",
     "react-slick": "^0.26.1",
+    "react-snap": "^1.23.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.0",
     "swr": "^0.2.0"
@@ -35,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
