--- a/package.json
+++ b/package.json
@@ -3,35 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^19.0.0",
-    "@ckeditor/ckeditor5-editor-classic": "^19.0.0",
-    "@ckeditor/ckeditor5-image": "^19.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
+    "@ckeditor/ckeditor5-image": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@testing-library/user-event": "^12.0.11",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
-    "react-bootstrap-table-next": "^4.0.1",
-    "react-device-detect": "^1.12.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
-    "react-elastic-carousel": "^0.4.1",
-    "react-helmet": "^6.0.0",
-    "react-image-file-resizer": "^0.2.3",
-    "react-lazy-load-image-component": "^1.4.3",
+    "react-elastic-carousel": "^0.6.4",
+    "react-helmet": "^6.1.0",
+    "react-image-file-resizer": "^0.3.1",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-loading": "^2.0.3",
-    "react-responsive-carousel": "^3.2.5",
-    "react-router-dom": "^5.1.2",
+    "react-responsive-carousel": "^3.2.9",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-share": "^4.1.0",
+    "react-share": "^4.2.0",
     "react-slick": "^0.26.1",
     "react-snap": "^1.23.0",
     "react-social-icons": "^4.1.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.1.0",
-    "swr": "^0.2.0"
+    "styled-components": "^5.1.1",
+    "swr": "^0.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
