--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "news",
   "version": "0.1.0",
+  "description": "haberibul",
   "private": true,
+  "main": "src/index.js",
   "dependencies": {
+    "@types/next": "^9.0.0",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^9.4.4",
+    "node-sass": "^4.14.1",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
@@ -23,8 +32,6 @@
     "react-lazy-load-image-component": "^1.5.0",
     "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.2.9",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.0",
     "react-slick": "^0.26.1",
@@ -35,14 +42,10 @@
     "swr": "^0.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   },
   "browserslist": {
     "production": [
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "terser-brunch": "^4.0.0"
+    "@types/node": "^14.0.20",
+    "typescript": "^3.9.6"
   }
 }
