--- a/package.json
+++ b/package.json
@@ -5,13 +5,6 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
-    "@types/next": "^9.0.0",
-    "@types/react": "^16.9.41",
-    "@types/react-dom": "^16.9.8",
-    "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
-    "next": "^9.4.4",
-    "node-sass": "^4.14.1",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
@@ -19,30 +12,34 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
+    "@types/next": "^9.0.0",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cross-env": "^7.0.2",
+    "next": "^9.4.4",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
-    "react-elastic-carousel": "^0.6.4",
-    "react-helmet": "^6.1.0",
     "react-image-file-resizer": "^0.3.1",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-loading": "^2.0.3",
-    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.1",
     "react-share": "^4.2.0",
     "react-slick": "^0.26.1",
-    "react-snap": "^1.23.0",
     "react-social-icons": "^4.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3"
   },
   "scripts": {
-    "dev": "next",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export"
