--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.5.0",
     "cross-env": "^7.0.2",
     "next": "^9.4.4",
+    "next-offline": "^5.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -42,7 +43,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export -o build/"
   },
   "browserslist": {
     "production": [
