--- a/package.json
+++ b/package.json
@@ -9,32 +9,34 @@
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.3",
-    "@testing-library/user-event": "^12.0.11",
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.8",
+    "@testing-library/user-event": "^12.1.0",
     "@types/next": "^9.0.0",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.1",
     "cross-env": "^7.0.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.5.1",
     "next-offline": "^5.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.3.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-scripts": "3.4.1",
-    "react-share": "^4.2.0",
+    "react-share": "^4.2.1",
     "react-slick": "^0.26.1",
     "react-social-icons": "^4.1.0",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.4.5",
     "styled-components": "^5.1.1",
     "swr": "^0.2.3"
   },
@@ -58,7 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.0.20",
-    "typescript": "^3.9.6"
+    "@types/node": "^14.0.27",
+    "typescript": "^3.9.7"
   }
 }
