feat: Upgrade next

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^4.5.1",
     "cross-env": "^7.0.2",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.5.1",
+    "next": "^9.5.2",
     "next-offline": "^5.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -31,7 +31,7 @@
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.3.1",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-share": "^4.2.1",
     "react-slick": "^0.26.1",
     "react-social-icons": "^4.1.0",
