--- a/package.json
+++ b/package.json
@@ -9,35 +9,36 @@
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.5",
+    "@testing-library/user-event": "^12.2.0",
     "@types/next": "^9.0.0",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "cross-env": "^7.0.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.5.3",
-    "next-offline": "^5.0.2",
+    "isomorphic-unfetch": "^3.1.0",
+    "next": "^10.0.1",
+    "next-offline": "^5.0.3",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "npm": "^7.0.8",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
-    "react-device-detect": "^1.13.1",
-    "react-dom": "^16.13.1",
+    "react-device-detect": "^1.14.0",
+    "react-dom": "^16.14.0",
     "react-image-file-resizer": "^0.3.8",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-scripts": "^3.4.3",
-    "react-share": "^4.2.1",
+    "react-scripts": "^3.4.4",
+    "react-share": "^4.3.1",
     "react-slick": "^0.26.1",
     "react-social-icons": "^4.1.0",
     "slick-carousel": "^1.8.1",
-    "slugify": "^1.4.5",
-    "styled-components": "^5.2.0",
+    "slugify": "^1.4.6",
+    "styled-components": "^5.2.1",
     "swr": "^0.2.3"
   },
   "scripts": {
@@ -60,7 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.11.1",
+    "@types/node": "^14.14.6",
     "typescript": "^3.9.7"
   }
 }
