feat: Add next auth with google api

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_PATH=https://localhost:5001/api/
 NODE_TLS_REJECT_UNAUTHORIZED = '0'
+GOOGLE_ID=920440646785-dt64si2l96i0eamr9lj1a5fg4bnd7f5q.apps.googleusercontent.com
+GOOGLE_SECRET=-ZIlFSEan2KHsQvpSdzWNzFM
