--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.2",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.3",
+    "next-auth": "^3.1.0",
     "next-offline": "^5.0.3",
     "node-sass": "^4.14.1",
     "npm": "^7.0.15",
