feat: Take logo to footer and add env var

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_PATH=https://haberibul-api.herokuapp.com/api/
+GOOGLE_ID=920440646785-07o88erqd1e3o64jpm4jfi2gn1vsebud.apps.googleusercontent.com
+GOOGLE_SECRET=CQwT_v1WySSs5ojwMobq_10y
