--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,6 @@ NEXT_PUBLIC_API_PATH=https://localhost:5001/api/
 NODE_TLS_REJECT_UNAUTHORIZED = '0'
 GOOGLE_ID=920440646785-dt64si2l96i0eamr9lj1a5fg4bnd7f5q.apps.googleusercontent.com
 GOOGLE_SECRET=-ZIlFSEan2KHsQvpSdzWNzFM
+DATABASE_URL=mongodb://localhost:27017
+FACEBOOK_ID=3316757751690015
+FACEBOOK_SECRET=33d6656cccb50ae76324408ecbecea91
