--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_API_PATH=https://haberibul-api.herokuapp.com/api/
 GOOGLE_ID=920440646785-07o88erqd1e3o64jpm4jfi2gn1vsebud.apps.googleusercontent.com
 GOOGLE_SECRET=CQwT_v1WySSs5ojwMobq_10y
+DATABASE_URL=mongodb+srv://dba:Dxbhzp43@cluster0-yaruk.mongodb.net/test?retryWrites=true&w=majority
+FACEBOOK_ID=3316757751690015
+FACEBOOK_SECRET=33d6656cccb50ae76324408ecbecea91
