--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.6.0",
     "@types/next": "^9.0.0",
@@ -21,6 +21,7 @@
     "bootstrap": "^4.5.3",
     "cross-env": "^7.0.3",
     "isomorphic-unfetch": "^3.1.0",
+    "mongodb": "^3.6.3",
     "next": "^10.0.4",
     "next-auth": "^3.1.0",
     "next-offline": "^5.0.3",
@@ -63,7 +64,7 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^14.14.16",
+    "@types/node": "^14.14.17",
     "typescript": "^3.9.7"
   }
 }
