fix: Add jquery and set mongo url without query

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ckeditor/ckeditor5-editor-classic": "^20.0.0",
     "@ckeditor/ckeditor5-image": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@popperjs/core": "^2.6.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.6.0",
@@ -21,12 +22,14 @@
     "bootstrap": "^4.5.3",
     "cross-env": "^7.0.3",
     "isomorphic-unfetch": "^3.1.0",
+    "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "next": "^10.0.4",
     "next-auth": "^3.1.0",
     "next-offline": "^5.0.3",
     "node-sass": "^4.14.1",
     "npm": "^7.3.0",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
