--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "react-share": "^4.3.1",
     "react-slick": "^0.26.1",
     "react-social-icons": "^4.1.0",
+    "reflect-metadata": "^0.1.13",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.4.6",
     "styled-components": "^5.2.1",
     "swr": "^0.2.3",
+    "typeorm": "^0.2.28",
     "watermarkjs": "^2.1.1"
   },
   "scripts": {
