--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_API_PATH=https://localhost:5001/api/
 NODE_TLS_REJECT_UNAUTHORIZED = '0'
 NEXTAUTH_URL=http://localhost:3000
-DATABASE_URL=mongodb+srv://dba:Dxbhzp43@cluster0-yaruk.mongodb.net/nextauth?retryWrites=true&w=majority
+DATABASE_URL=mongodb://localhost:27017/nextauth
 EMAIL_FROM=Haberi Bul <haberibulbilgi@gmail.com>
 EMAIL_USERNAME=haberibulbilgi@gmail.com
 EMAIL_PASSWORD=haberibulbilgi123
