--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^10.0.4",
     "next-auth": "^3.1.0",
     "next-offline": "^5.0.3",
+    "next-sitemap": "^1.3.29",
     "node-sass": "^5.0.0",
     "npm": "^7.3.0",
     "popper.js": "^1.16.1",
@@ -53,7 +54,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export -o build/"
+    "export": "next export -o build/",
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "browserslist": {
     "production": [
