--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^5.0.0",
     "npm": "^7.3.0",
     "popper.js": "^1.16.1",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-table-next": "^4.0.3",
