--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,6 @@ DATABASE_URL=mongodb+srv://dba:Dxbhzp43@cluster0-yaruk.mongodb.net/nextauth?retr
 EMAIL_FROM=Haberi Bul <haberibulbilgi@gmail.com>
 EMAIL_USERNAME=haberibulbilgi@gmail.com
 EMAIL_PASSWORD=haberibulbilgi123
+TWITTER_CLIENT_ID=19744887
+TWITTER_CLIENT_KEY=WOwkvvfoXVfK1K8F6NpY8VljC
+TWITTER_CLIENT_SECRET=KGl1sPsPzrAGyFeRM5tiFmSz9PR7VKhZPrquyWcXtn30PZ4tyB
