--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next export -o build/",
-    "postbuild": "next-sitemap --config next-sitemap.config.js"
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
+    "test": "jest --watch"
   },
   "browserslist": {
     "production": [
@@ -71,6 +72,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "typescript": "^4.1.3"
   }
 }
